[chore] add dependencies to pyproject.toml, add FAD comparison

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "frechet_audio_distance"
-version = "0.0.3"
+version = "0.0.4"
 authors = [
   { name="Hao Hao Tan", email="helloharry66@gmail.com" },
 ]
@@ -16,6 +16,14 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+  'numpy',
+  'torch',
+  'scipy',
+  'tqdm',
+  'soundfile',
+  'resampy',
 ]
 
 [project.urls]
