--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  'numpy==1.23.4',
+  'numpy>=1.23.4',
   'torch',
-  'scipy==1.10.1',
+  'scipy>=1.10.1',
   'tqdm',
   'soundfile',
   'resampy',
