--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
   'resampy',
   'torchlibrosa',
   'laion_clap',
-  'transformers<=4.30.2',
+  'transformers>=4.30.2',
   'torchaudio',
   'encodec',
 ]
