--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,29 +4,29 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "frechet_audio_distance"
-version = "0.3.1"
+version = "0.3.2"
 authors = [
   { name="Hao Hao Tan", email="helloharry66@gmail.com" },
 ]
 description = "A lightweight library of Frechet Audio Distance calculation."
 readme = "README.md"
-license = { file="LICENSE" }
-requires-python = ">=3.7"
+license = "MIT"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  'numpy>=1.23.4',
+  'numpy<2.0',
   'torch',
-  'scipy>=1.10.1',
+  'scipy',
   'tqdm',
   'soundfile',
   'resampy',
   'torchlibrosa',
+  'torchvision',
   'laion_clap',
-  'transformers>=4.30.2',
+  'transformers',
   'torchaudio',
   'encodec',
 ]
